--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,9 +16,11 @@
     "vercel:yolo": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true --build-env VERCEL_TELEMETRY_DISABLED=1"
   },
   "dependencies": {
+    "@dynamic-labs/ethereum": "^4.27.0",
+    "@dynamic-labs/sdk-react": "^0.18.30",
     "@heroicons/react": "~2.1.5",
     "@rainbow-me/rainbowkit": "2.2.7",
-    "@tanstack/react-query": "~5.59.15",
+    "@tanstack/react-query": "^5.85.3",
     "@uniswap/sdk-core": "~5.8.2",
     "@uniswap/v2-sdk": "~4.6.1",
     "blo": "~1.2.0",
@@ -33,8 +35,8 @@
     "react-dom": "~19.0.0",
     "react-hot-toast": "~2.4.0",
     "usehooks-ts": "~3.1.0",
-    "viem": "2.31.1",
-    "wagmi": "2.15.6",
+    "viem": "^2.33.3",
+    "wagmi": "^2.16.3",
     "zustand": "~5.0.0"
   },
   "devDependencies": {
