--- a/package.json
+++ b/package.json
@@ -57,5 +57,14 @@
   },
   "engines": {
     "node": ">=20.18.3"
+  },
+  "dependencies": {
+    "@tanstack/react-query": "^5.85.3",
+    "@walletconnect/environment": "^1.0.1",
+    "@walletconnect/ethereum-provider": "^2.21.8",
+    "@walletconnect/universal-provider": "^2.21.8",
+    "tslib": "1.14.1",
+    "viem": "^2.33.3",
+    "wagmi": "^2.16.3"
   }
 }
