--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,8 +16,8 @@
     "vercel:yolo": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true --build-env VERCEL_TELEMETRY_DISABLED=1"
   },
   "dependencies": {
-    "@dynamic-labs/ethereum": "^4.27.0",
-    "@dynamic-labs/sdk-react": "^0.18.30",
+    "@dynamic-labs/ethereum": "^4.20.2",
+    "@dynamic-labs/sdk-react": "^0.17.34",
     "@heroicons/react": "~2.1.5",
     "@rainbow-me/rainbowkit": "2.2.7",
     "@tanstack/react-query": "^5.85.3",
@@ -26,13 +26,14 @@
     "blo": "~1.2.0",
     "burner-connector": "0.0.16",
     "daisyui": "5.0.9",
-    "kubo-rpc-client": "~5.0.2",
+    "kubo-rpc-client": "^5.2.0",
     "next": "~15.2.3",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
+    "porto": "^0.0.68",
     "qrcode.react": "~4.0.1",
-    "react": "~19.0.0",
-    "react-dom": "~19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "~2.4.0",
     "usehooks-ts": "~3.1.0",
     "viem": "^2.33.3",
@@ -43,11 +44,11 @@
     "@tailwindcss/postcss": "4.0.15",
     "@trivago/prettier-plugin-sort-imports": "~4.3.0",
     "@types/node": "~18.19.50",
-    "@types/react": "~19.0.7",
+    "@types/react": "^18.2.0",
     "abitype": "1.0.6",
     "autoprefixer": "~10.4.20",
     "bgipfs": "~0.0.12",
-    "eslint": "~9.23.0",
+    "eslint": "^9.33.0",
     "eslint-config-next": "~15.2.3",
     "eslint-config-prettier": "~10.1.1",
     "eslint-plugin-prettier": "~5.2.4",
@@ -56,7 +57,7 @@
     "tailwindcss": "4.1.3",
     "type-fest": "~4.26.1",
     "typescript": "~5.8.2",
-    "vercel": "~39.1.3"
+    "vercel": "^39.4.2"
   },
   "packageManager": "yarn@3.2.3"
 }
