--- a/package.json
+++ b/package.json
@@ -59,6 +59,10 @@
     "node": ">=20.18.3"
   },
   "dependencies": {
+    "@dynamic-labs/ethereum": "^4.27.0",
+    "@dynamic-labs/flow": "^4.27.0",
+    "@dynamic-labs/sdk-react-core": "^4.27.0",
+    "@dynamic-labs/wagmi-connector": "^4.27.0",
     "@tanstack/react-query": "^5.85.3",
     "@walletconnect/environment": "^1.0.1",
     "@walletconnect/ethereum-provider": "^2.21.8",
