--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,15 +16,9 @@
     "vercel:yolo": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true --build-env VERCEL_TELEMETRY_DISABLED=1"
   },
   "dependencies": {
-    "@dynamic-labs/ethereum": "^4.20.2",
-    "@dynamic-labs/sdk-react": "^0.17.34",
+    "@dynamic-labs/sdk-react-core": "^4.27.0",
     "@heroicons/react": "~2.1.5",
-    "@rainbow-me/rainbowkit": "2.2.7",
     "@tanstack/react-query": "^5.85.3",
-    "@uniswap/sdk-core": "~5.8.2",
-    "@uniswap/v2-sdk": "~4.6.1",
-    "blo": "~1.2.0",
-    "burner-connector": "0.0.16",
     "daisyui": "5.0.9",
     "kubo-rpc-client": "^5.2.0",
     "next": "~15.2.3",
@@ -36,8 +30,6 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "~2.4.0",
     "usehooks-ts": "~3.1.0",
-    "viem": "^2.33.3",
-    "wagmi": "^2.16.3",
     "zustand": "~5.0.0"
   },
   "devDependencies": {
