--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,18 +16,19 @@
     "vercel:yolo": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true --build-env VERCEL_TELEMETRY_DISABLED=1"
   },
   "dependencies": {
+    "@dynamic-labs/flow": "^4.27.0",
     "@dynamic-labs/sdk-react-core": "^4.27.0",
     "@heroicons/react": "~2.1.5",
+    "@simplewebauthn/browser": "^13.1.2",
     "@tanstack/react-query": "^5.85.3",
+    "base-x": "^5.0.1",
     "daisyui": "5.0.9",
-    "kubo-rpc-client": "^5.2.0",
-    "next": "~15.2.3",
+    "next": "^15.4.6",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
-    "porto": "^0.0.68",
     "qrcode.react": "~4.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hot-toast": "~2.4.0",
     "usehooks-ts": "~3.1.0",
     "zustand": "~5.0.0"
