--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -3,18 +3,69 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "description": "Hardhat configuration for Flow EVM smart contract development",
+  "keywords": [
+    "hardhat",
+    "ethereum",
+    "flow",
+    "smart-contracts",
+    "solidity"
+  ],
+  "author": "SE-2 Team",
+  "license": "MIT",
   "scripts": {
     "chain": "hardhat node",
     "compile": "hardhat compile",
-    "deploy:sepolia": "node scripts/deploy.mjs"
+    "clean": "hardhat clean",
+    "test": "hardhat test",
+    "test:gas": "REPORT_GAS=true hardhat test",
+    "coverage": "hardhat coverage",
+    "deploy": "hardhat run scripts/deploy.mjs",
+    "deploy:flow": "hardhat run scripts/deploy.mjs --network flowMainnet",
+    "deploy:testnet": "hardhat run scripts/deploy.mjs --network flowTestnet",
+    "deploy:local": "hardhat run scripts/deploy.mjs --network localhost",
+    "verify": "hardhat verify",
+    "flatten": "hardhat flatten",
+    "size": "hardhat size-contracts",
+    "node": "hardhat node",
+    "console": "hardhat console",
+    "accounts": "hardhat run scripts/listAccount.ts",
+    "generate": "hardhat run scripts/generateAccount.ts",
+    "import": "hardhat run scripts/importAccount.ts",
+    "reveal": "hardhat run scripts/revealPK.ts"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@typechain/ethers-v6": "^0.4.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^10.0.0",
     "@types/node": "^20.14.10",
     "chai": "^4.4.1",
     "ethers": "^6.14.0",
     "hardhat": "3.0.0",
+    "hardhat-gas-reporter": "^1.0.8",
     "mocha": "^10.4.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-solidity": "^1.3.0",
+    "solhint": "^4.0.0",
+    "solidity-coverage": "^0.8.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/scaffold-eth/scaffold-eth-2.git"
   }
 }
