--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -44,10 +44,10 @@
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^10.0.0",
-    "@types/node": "^20.14.10",
+    "@types/node": "^24.3.0",
     "chai": "^4.4.1",
     "ethers": "^6.14.0",
-    "hardhat": "3.0.0",
+    "hardhat": "^2.19.0",
     "hardhat-gas-reporter": "^1.0.8",
     "mocha": "^10.4.0",
     "prettier": "^3.0.0",
