--- a/packages/nextjs/.gitignore
+++ b/packages/nextjs/.gitignore
@@ -20,11 +20,11 @@
 .DS_Store
 *.pem
 
-# demo
-npm-demo.log*
-yarn-demo.log*
+# debug
+npm-debug.log*
+yarn-debug.log*
 yarn-error.log*
-.pnpm-demo.log*
+.pnpm-debug.log*
 
 # local env files
 .env
